# Kinect-Skeleton-Server

./: CMakeLists.txt  README.md  SkelServer.sln  bbox.hpp  main.cpp  message.hpp  server.hpp
SkelServer/: SkelServer.vcxproj  SkelServer.vcxproj.filters  main.cpp  server.hpp
SkelServer/Debug/: vc140.idb
SkelServer/Debug/SkelServer.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  SkelServer.lastbuildstate
SkelServer/Release/SkelServer.tlog/: SkelServer.lastbuildstate
SkelServer/x64/Release/SkelServer.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  SkelServer.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
